# compressPPTX

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  compress_pptx.py  pyproject.toml
.github/workflows/: ci.yml  windows-exe.yml
scripts/: build_windows.ps1
src/compresspptx/: __init__.py  __main__.py  core.py
tests/: test_core.py
