[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "compressPPTX"
version = "0.1.0"
description = "Compress PPTX files by recompressing embedded media."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.0",
]
authors = [
    { name = "Michael Beigl", email = "michael@teco.edu" },
]
license = { text = "CC-BY 4.0" }

[project.scripts]
compress-pptx = "compresspptx.core:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
